[gd_scene load_steps=13 format=3 uid="uid://cf40pks2yakom"]

[ext_resource type="Script" path="res://scripts/stuntDrone.gd" id="1_gaoxp"]
[ext_resource type="Texture2D" uid="uid://dhk65rvmrsyg5" path="res://sprites/game/StuntDrone.png" id="2_st336"]
[ext_resource type="Texture2D" uid="uid://dfx617e2beixe" path="res://sprites/game/overlay/Basic.png" id="3_tt2f5"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_psqdy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pdcjc"]
height = 26.6667

[sub_resource type="Animation" id="Animation_7ej8s"]
resource_name = "Left"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8, 1, 1.5, 2),
"transitions": PackedFloat32Array(2, 0.5, 1, 2, 0.5, 1),
"update": 0,
"values": [Vector2(-20, 0), Vector2(-28, -13), Vector2(-28, -12), Vector2(-28, -12), Vector2(-24, -27), Vector2(-24, -26)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.3, 1.5, 2),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 1, 0.5, 2, 0.5, 1),
"update": 0,
"values": [0.0, 0.349066, 0.174533, 0.0, 0.0, -0.174533, -0.0872665, 0.0]
}

[sub_resource type="Animation" id="Animation_47tn3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_kaf2y"]
resource_name = "Right"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8, 1, 1.5, 2),
"transitions": PackedFloat32Array(2, 0.5, 1, 2, 0.5, 1),
"update": 0,
"values": [Vector2(32, 0), Vector2(40, -13), Vector2(40, -12), Vector2(40, -12), Vector2(36, -27), Vector2(36, -26)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.3, 1.5, 2),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 1, 0.5, 2, 0.5, 1),
"update": 0,
"values": [0.0, -0.349066, -0.174533, 0.0, 0.0, 0.174533, 0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lgmrk"]
_data = {
"Left": SubResource("Animation_7ej8s"),
"RESET": SubResource("Animation_47tn3"),
"Right": SubResource("Animation_kaf2y")
}

[sub_resource type="Animation" id="Animation_7bq16"]
resource_name = "Jump"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Drone/Eye:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0, 1),
"update": 0,
"values": [Vector2(0, 3), Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_ceuhd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Drone/Eye:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_60gdu"]
_data = {
"Jump": SubResource("Animation_7bq16"),
"RESET": SubResource("Animation_ceuhd")
}

[node name="Drone" type="Node2D"]
light_mask = 6
texture_filter = 1
material = SubResource("CanvasItemMaterial_psqdy")
position = Vector2(0, -12)
scale = Vector2(0.75, 0.75)
script = ExtResource("1_gaoxp")

[node name="Drone" type="Sprite2D" parent="."]
light_mask = 6
use_parent_material = true
texture = ExtResource("2_st336")
hframes = 7

[node name="Eye" type="Sprite2D" parent="Drone"]
visible = false
light_mask = 3
position = Vector2(0, 1)
texture = ExtResource("3_tt2f5")

[node name="Bumper" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumper"]
position = Vector2(-3.55271e-15, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pdcjc")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Getup" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lgmrk")
}

[node name="Jump" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_60gdu")
}

[connection signal="area_entered" from="Bumper" to="." method="_on_bumper_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="Jump" to="." method="_on_jump_animation_finished"]
